--- a/index.html
+++ b/index.html
@@ -27,8 +27,22 @@
           speakers, here to share their stories.
         </p>
       </section>
-      <section><h5>Schedule</h5></section>
-      <section></section>
+      <section>
+        <h5>Schedule</h5>
+        <h3>Three Inspiring Days</h3>
+        <p>
+          Enjoy three inspiring and action-packed days of talks, gatherings, and
+          all-around good times.
+        </p>
+      </section>
+      <section>
+        <h5>Venue</h5>
+        <h3>The Chicago Theatre</h3>
+        <p>
+          Within the heart of downtown Chicago, The Chicago Theatre will provide
+          a beautiful conference venue.
+        </p>
+      </section>
     </section>
     <footer>
       <small>&copy; Styles Conference</small>
