--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css" />
   </head>
   <body>
-    <header>
+    <header class="container">
       <h1><a href="index.html">Styles Conference</a></h1>
       <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
       <nav>
@@ -18,15 +18,15 @@
       </nav>
     </header>
 
-    <section>
+    <section class="hero container">
       <h2>Dedicated to the Craft of Building Websites</h2>
       <p>
         Every year the brightest web designers and front-end developers descend
         on Chicago to discuss the latest technologies. Join us this August!
       </p>
-      <a href="register.html">Register Now</a>
+      <a href="register.html" class="btn btn-alt">Register Now</a>
     </section>
-    <section>
+    <section class="container">
       <section>
         <a href="speakers.html">
         <h5>speakers</h5>
@@ -59,7 +59,7 @@
         </p>
       </section>
     </section>
-    <footer>
+    <footer class="container">
       <small>&copy; Styles Conference</small>
       <nav>
         <a href="index.html">Home</a>
