--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" 
+    href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
@@ -17,9 +21,9 @@
         >
       </h1>
 
-      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-      <nav>
+      <nav class="nav primary-nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
@@ -46,7 +50,7 @@
     <section class="grid">
       <!-- Speakers -->
 
-      <section class="col-1-3">
+      <section class="teaser col-1-3">
         <a href="speakers.html">
           <h5>Speakers</h5>
           <h3>World-Class Speakers</h3>
@@ -93,7 +97,7 @@
     <footer class="primary-footer container group">
       <small>&copy; Styles Conference</small>
 
-      <nav>
+      <nav class="nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
