--- a/register.html
+++ b/register.html
@@ -4,12 +4,14 @@
     <meta charset=""utf-8">
     <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css" />
+    <link rel="stylesheet" 
+    href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
   <body>
-    <header class="container">
-      <h1><a href="index.html">Styles Conference</a></h1>
-      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
-      <nav>
+    <header class="container group">
+      <h1 class="logo"><a href="index.html">Styles Conference</a></h1>
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <nav class="primary-nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
@@ -20,9 +22,9 @@
     <section class="container">
       <h1>Register</h1>
     </section>
-    <footer class="container">
+    <footer class="primary-footer container group">
       <small>&copy; Styles Conference</small>
-      <nav>
+      <nav class="nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
