--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <body>
     <!-- Header -->
 
-    <header class="container group">
+    <header class="primary-header container group">
+      
+
+      
       <h1 class="logo">
         <a href="index.html"
           >Styles <br />
@@ -47,7 +50,8 @@
 
     <!-- Teasers -->
 
-    <section class="grid">
+    <section class="row">
+      <div class="grid">
       <!-- Speakers -->
 
       <section class="teaser col-1-3">
@@ -65,7 +69,7 @@
       Schedule
 
       -->
-      <section class="col-1-3">
+      <section class="teaser col-1-3">
         <a href="schedule.html">
           <h5>Schedule</h5>
           <h3>Three Inspiring Days</h3>
@@ -80,7 +84,7 @@
       Venue
 
       -->
-      <section class="col-1-3">
+      <section class="teaser col-1-3">
         <a href="venue.html">
           <h5>Venue</h5>
           <h3>The Chicago Theatre</h3>
