--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
     href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
   <body>
-    <header class="container group">
+    <header class="primary-header container group">
       <h1 class="logo"><a href="index.html">Styles Conference</a></h1>
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
       <nav class="primary-nav">
